* Agent Monitoring: fix some uses of undefined variables
* CallCenter Configuration: add new flag to completely disable dial prediction
  in dialer.
* Agent Console: implement status refresh via Server-Sent Events. This mode of
  operation saves further bandwidth by removing a POST request after an event
  is received or after the 2-minute timeout. Long polling is kept as a fallback
  for Internet Explorer.
* Agent Console: fix incorrect initial break state that caused console to 
  immediately refresh break state if agent console is entered while agent is
  in break.
* Agent Console: fix incorrect function reference that caused login process to
  hang if user navigates to a different module and back during login process. 
* Agent Console: do not loop endlessly when some other client puts *our* agent
  on hold.
* Agent Console: fail more gracefully when shutting down dialer process, by 
  logging out the agent instead of getting stuck in an infinite loop.
* Dialer: add new function MultiplexServer::vaciarBuferesEscritura() to flush 
  all output buffers.
* Dialer: modify packet processing algorithm to prioritize the Asterisk AMI 
  connection over other connections.
* Dialer: flush output buffers after every packet processing to ensure events 
  are delivered as soon as possible.
* Dialer: add cache for output of 'agent show' and 'queue show' commands. These 
  commands are expensive to execute and greatly slow down the 'getagentstatus' 
  ECCP procedure. The current cache lifetime is 1.5 seconds.
* Dialer: add utility function Predictivo::leerEstadoAgente() that will make use
  of the output cache if possible.
* Dialer: add trimmed down function Predictivo::obtenerCanalRemotoAgente() that
  only runs 'agent show' instead of building the entire queue report, just to 
  discard almost all of it.
* Dialer (ECCP): new ECCP diagnostic script getagentstatusloop.php
* Agent Console: fix typo that caused web console to refresh the agent status
  twice on agent link.